--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hallå Värden</h1>
+    <h1>Hallå Värden!</h1>
     <body>Disel part 1, SSL secure connection</body>
 </body>
 </html>
